changed ionic dependencies so that it is no longer linked to CatsCode

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
-  "name": "catsCode",
-  "app_id": "49014761",
+  "name": "myVillage",
+  "app_id": "07667cb1",
   "v2": true,
   "typescript": true
 }
