--- a/package.json
+++ b/package.json
@@ -53,5 +53,5 @@
       "locator": "ios"
     }
   ],
-  "description": "catsCode: An Ionic project"
+  "description": "myVillage: An Ionic project"
 }
