--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "@ionic-native/splash-screen": "3.1.0",
     "@ionic-native/status-bar": "3.1.0",
     "@ionic/cloud-angular": "^0.12.0",
-    "@ionic/storage": "2.0.0",
+    "@ionic/storage": "^2.0.0",
     "angularfire2": "^2.0.0-beta.8",
+    "cordova-sqlite-storage": "^2.0.4",
     "firebase": "^3.7.4",
     "ionic-angular": "2.3.0",
     "ionicons": "3.0.0",
@@ -53,5 +54,10 @@
       "locator": "ios"
     }
   ],
-  "description": "myVillage: An Ionic project"
+  "description": "myVillage: An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-sqlite-storage": {}
+    }
+  }
 }
