--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@ionic-native/status-bar": "3.1.0",
     "@ionic/cloud-angular": "^0.12.0",
     "@ionic/storage": "^2.0.0",
+    "angular-moment": "^1.0.1",
     "angularfire2": "^2.0.0-beta.8",
     "cordova-sqlite-storage": "^2.0.4",
     "firebase": "^3.7.4",
     "ionic-angular": "2.3.0",
     "ionicons": "3.0.0",
+    "moment": "^2.18.1",
     "rxjs": "5.0.1",
     "sw-toolbox": "3.4.0",
     "zone.js": "0.7.2"
